devel
-----

* `COLLECT WITH COUNT INTO x` and `COLLECT var = expr WITH COUNT INTO x` are now
  internally transformed into `COLLECT AGGREGATE x = LENGTH(null)` and
  `COLLECT var = expr AGGREGATE x = LENGTH(null)` respectively. This not only
  simplified the code, but also allows more query optimizations:
    - If the variable in `COLLECT WITH COUNT INTO var` is not used, the implicit
      aggregator is now removed.
    - All queries of the form `COLLECT AGGREGATE x = LENGTH(_)` are now executed
      using the count executor, which can result in significantly improved
      performance.

* Minor and rare AQL performance improvement, in nested subqueries:
  LET sq1 ([..] FILTER false == true LET sq2 = (<X>) [..])
  where sq1 produces no data (e.g. by the above filter) for sq2,
  the part <X> have been asked two times (second returns empty result),
  instead of one, if and only if the mainquery executes sq1 exactly one time.
  Now we get away with one call only.
  In the case sq1 has data, or sq1 is executed more often, only one call was needed
  (assuming the data fits in one batch).
* Updated OpenSSL to 1.1.1i and OpenLDAP to 2.4.56.

* Make internal ClusterInfo::getPlan() wait for initial plan load from agency.

* Added AQL timezone functions `DATE_TIMEZONE` and `DATE_TIMEZONES`.

* Make DB servers report storage engine health to the agency, via a new "health"
  attribute in requests sent to Sync/ServerStates/<id>.
  The supervision can in the future check this attribute if it is posted,
  and mark servers as BAD or FAILED in case an unhealthy status is reported.
  DB server health is currently determined by whether or not the storage engine
  (RocksDB) has reported a background error, and by whether or not the free disk 
  space has reached a critical low amount. The current threshold for free disk
  space is set at 1% of the disk capacity (only the disk is considered that 
  contains the RocksDB database directory).