@@ -1,6 +1,13 @@
 devel
 -----
 
+* Added metric `arangodb_server_statistics_cpu_cores` to provide the number of
+  CPU cores visibile to the arangod process. This is the number of CPU cores
+  reported by the operating system to the process.
+  If the environment variable `ARANGODB_OVERRIDE_DETECTED_NUMBER_OF_CORES` is
+  set to a positive value at instance startup, this value will be returned
+  instead.
+
 * `COLLECT WITH COUNT INTO x` and `COLLECT var = expr WITH COUNT INTO x` are now
   internally transformed into `COLLECT AGGREGATE x = LENGTH(null)` and
   `COLLECT var = expr AGGREGATE x = LENGTH(null)` respectively. This not only
